Pagina web de Nes

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae</title>
+    <title>Nestor Gonsalez</title>
 </head>
 <body>
+
+    <!--Barra de Navegacion-->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#Inicio">Inicio</a></li>
+                <li><a href="">Manga</a></li>
+                <li><a href="">Campus</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!--Seccion de inicio-->
     
+    <section id>
+
+<!--Sobre mi-->
+<section id="Sobre mi"
+
+
+    <h1>Nestor Gonsalez Sanchez</h1>
+    <p>Soy Estudiante de Ingenieria Mecatronica, trabajo de comerciante en mi negocio propio.</p>
+    <img src="https://img.freepik.com/vector-premium/persona-dato-curioso-sonriendo-usando-lentes-ilustracion-vectorial_969863-192330.jpg?semt=ais_hybrid" alt="Foto Cami" width="200px">
+
+    <h2>Mis redes sociales</h2>
+    <a href="https://www.leercapitulo.co/" target="_blank">Visita la pagina para leer manga</a>
+
+    <h2>Mis habilidades</h2>
+    <ol>
+        <li>Programacion web</li>
+        <li>Edicion de imagenes</li>
+    </ol>
 </body>
 </html>
