Conociedo la web semantica

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <h1>Nestor Gonsalez Sanchez</h1>
     <p>Soy Estudiante de Ingenieria Mecatronica, trabajo de comerciante en mi negocio propio.</p>
-    <img src="https://img.freepik.com/vector-premium/persona-dato-curioso-sonriendo-usando-lentes-ilustracion-vectorial_969863-192330.jpg?semt=ais_hybrid" alt="Foto Cami" width="200px">
+    <img src="https://img.freepik.com/vector-premium/persona-dato-curioso-sonriendo-usando-lentes-ilustracion-vectorial_969863-192330.jpg?semt=ais_hybrid" alt="Foto Nestor" width="200px" height="200px">
 
     <h2>Mis redes sociales</h2>
     <a href="https://www.leercapitulo.co/" target="_blank">Visita la pagina para leer manga</a>
