--- a/index.html
+++ b/index.html
@@ -11,32 +11,35 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#Inicio">Inicio</a></li>
-                <li><a href="">Manga</a></li>
-                <li><a href="">Campus</a></li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="https://zonatmo.com/">Manga</a></li>
+                <li><a href="https://edu.devf.la/campus/home">Campus</a></li>
             </ul>
         </nav>
     </header>
 
     <!--Seccion de inicio-->
-    
-    <section id>
-
-<!--Sobre mi-->
-<section id="Sobre mi"
-
-
+    <section id="inicio">
     <h1>Nestor Gonsalez Sanchez</h1>
     <p>Soy Estudiante de Ingenieria Mecatronica, trabajo de comerciante en mi negocio propio.</p>
     <img src="https://img.freepik.com/vector-premium/persona-dato-curioso-sonriendo-usando-lentes-ilustracion-vectorial_969863-192330.jpg?semt=ais_hybrid" alt="Foto Nestor" width="200px" height="200px">
+    </section>
 
-    <h2>Mis redes sociales</h2>
-    <a href="https://www.leercapitulo.co/" target="_blank">Visita la pagina para leer manga</a>
-
-    <h2>Mis habilidades</h2>
-    <ol>
-        <li>Programacion web</li>
-        <li>Edicion de imagenes</li>
-    </ol>
+    <!--Seccion sobre mi-->
+    <section id="Sobre mi">
+         <h2>Mis redes sociales</h2>
+         <a href="https://www.instagram.com/nes_gon3/" target="_blank">Visita mi instagram</a>
+             <section id="sobre-mis--habilidades">
+             <h2>Mis habilidades</h2>
+             <ul>
+                <li>Programacion web</li>
+                <li>Edicion de imagenes</li>
+             </ul>
+            </section>
+    </section>
+    <!--Pie de pagina-->
+    <footer>
+        <p>2024 Nestor Gonsalez. Todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
